Se ha creado una pantalla de felicitaciones al recolectar las esferas

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
     <!-- Contenedor del juego -->
     <canvas id="game-canvas"></canvas>
 
+    <!-- Pantalla de victoria -->
+    <div id="victory-screen">
+      <h1>¡Felicidades!</h1>
+      <p>¡Has recolectado todas las esferas!</p>
+      <br />
+      <button id="restart-button">Jugar nuevamente</button>
+    </div>
+
     <script type="module" src="./GameCode/Game.js"></script>
     <script type="module" src="./GameCode/TileMap.js"></script>
   </body>
