--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div id="start-screen">
       <h1 style="text-align: center">Poe's Maze</h1>
 
-      <p>
+      <p style="text-align: left">
         Sumérgete en un laberinto de obstáculos inspirados en los oscuros y
         fascinantes cuentos de Edgar Allan Poe. ¡Demuestra tus habilidades y
         esquiva los peligros que acechan!
       </p>
 
       <h2>Machine Learning en acción:</h2>
-      <p>
+      <p style="text-align: left">
         Controla al personaje con movimientos de tus manos de forma dinámica.
       </p>
 
@@ -35,12 +35,12 @@
         </li>
         <li>
           <strong>Abajo:</strong>
-          La palma de frente, pero girada horizontalmente
+          La palma de la mano de frente, pero girada horizontalmente
         </li>
         <li><strong>Derecha:</strong> El gesto de "OK"</li>
         <li>
           <strong>Izquierda:</strong>
-          Con el dedo índice y el pulgar levantado y señala hacia la izquierda
+          Con el dedo índice y el pulgar levantado, señala hacia la izquierda
           (Como una pistola)
         </li>
         <li>
