Se ha agregado la imagen de video

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <!-- Contenedor del juego -->
     <canvas id="game-canvas"></canvas>
 
+    <div id="video-container"></div>
+
     <!-- Pantalla de victoria -->
     <div id="victory-screen">
       <h1>¡Felicidades!</h1>
