--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
     <canvas id="game-canvas"></canvas>
 
     <div id="video-container"></div>
+    <div
+      id="gesture-display"
+      style="
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+      "
+    >
+      Detectando...
+    </div>
 
     <!-- Pantalla de victoria -->
     <div id="victory-screen">
